# adventofcode

./: Cargo.toml  README.md  bun.lockb  index.ts  package.json  tsconfig.json
.devcontainer/: devcontainer.json
2022/: README.md  index.ts  package.json  tsconfig.json
2022/input/cache/: 04.json  07.json  10.json
2022/solvers/05/: index.ts
2022/solvers/07/: index.ts  lib.test.ts
2022/solvers/08/: index.ts
2022/solvers/09/: index.ts  lib.ts
2022/solvers/11/: example.ts  index.ts  lib.ts
2022/solvers/12/: example.ts
2022/src/: args.rs  main.rs
2022/src/solutions/: day_eight.rs  day_five.rs  day_one.rs  day_seven.rs  day_six.rs  day_twelve.rs  mod.rs  template.rs
2023/: Cargo.toml
2023/src/: args.rs  input.rs  main.rs
2023/src/solutions/: day_four.rs  day_one.rs  day_three.rs  day_two.rs  mod.rs
input/: getInput.ts
input/cache/: 01.json  02.json  03.json  04.json  05.json  06.json  08.json  09.json  11.json  12.json
solvers/: 01.ts  02.ts  03.ts  04.ts  06.ts  07.ts  template.ts
solvers/07/: lib.test.ts  lib.ts
solvers/09/: index.ts  lib.test.ts
solvers/10/: index.ts
solvers/12/: index.ts  lib.ts
src/: args.rs  main.rs
src/solutions/: day_eight.rs  day_five.rs  day_four.rs  day_one.rs  day_three.rs  day_two.rs
