[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
lexopt = "0.3.0"
ureq = "2.7.1"
strum = { version = "0.25", features = ["derive"] }
itertools = "0.11.0"
